# claw-grid

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TAILSCALE-INTEGRATION.md  antfarm-workflow.yml  docker-compose.executor.yml  package.json  test-network.ts  vitest.config.ts
.github/workflows/: ci.yml
ai-scientist/: types.ts
api/: free-provider-pool.ts  governance-api.ts  llm-proxy-lite.ts  memov-mcp-proxy.ts  stream-chat.ts
c/fsc-codec/: Makefile  ffi-bun.ts  ffi_wrapper.c  fsc_codec.c  fsc_codec.h  test-ffi.ts  (+2 more)
config/: network.ts  redis.ts
deploy/: fsc-govern.service  sentinel.conf
docs/: AI_SCIENTIST_INTEGRATION.md  CONTROL_PANEL.md
fsc/: .env.worker  deploy-workers.sh  fsc-gateway-daemon.ts  fsc-worker-daemon.ts  memov-sync-daemon.ts  start-worker.sh  worktree-patch.ts
governance/: audit-log.ts  cost-controller.ts  index.ts  quality-judge.ts  rust-client.ts  stream-codec.ts  stream-trimmer.ts  trust-factor.ts  types.ts
memory/: README.md  pointer.js  qdrant-pointer.js
memov/: causal.js  memov-sync-strategy.md  ontology-init.js  ontology.js
rust/fsc-govern/: Cargo.toml
rust/fsc-govern/src/: audit_log.rs  cache.rs  cost_controller.rs  http_api.rs  main.rs  policy_engine.rs  protocol.rs  quality_judge.rs  redis_pool.rs  trust_factor.rs
rust/fsc-worker/: Cargo.toml
rust/fsc-worker/src/: docker_manager.rs  health_checker.rs  main.rs  task_consumer.rs
scripts/: agent-entrypoint.sh  deploy-all.sh  gen-keys.sh  init-mem-sync.sh  mem-gc.sh  memos-migration.js  ralph.sh  star-office-bridge.ts  test-pointer.js
tasks/: prd.json
(+17 files in other folders)
