[package]
name = "fsc-worker"
version = "0.1.0"
edition = "2021"
description = "FSC-Mesh Rust Worker — EPYC 节点高并发执行"

[dependencies]
tokio = { version = "1", features = ["full"] }
fred = "9"
bollard = "0.18"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
gethostname = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
lto = true
strip = true
